--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 # Dependencies
 node_modules/
+.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# Next.js
+.next/
+out/
+build/
+*.tsbuildinfo
+next-env.d.ts
 
 # BMAD cache and temp files
 _bmad/cache/
@@ -9,7 +23,6 @@ bmad
 .bmad
 .factory
 .opencode
-
 
 # OS generated files
 .DS_Store
@@ -33,3 +46,12 @@ Thumbs.db
 .env.development.local
 .env.test.local
 .env.production.local
+.env*
+.vercel
+
+# Debug/Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+*.pem
